uti-0.0.1-SNAPSHOT/src/main/java/com/olol/model/gen/parser/SasParser.java
/* Generated By:JavaCC: Do not edit this line. SasParser.java */
package com.olol.model.gen.parser;

import java.util.ArrayList;
import java.util.List;
import java.util.HashMap;
import java.io.File;
import java.io.IOException;
import java.io.InputStream;

import org.springframework.core.io.ClassPathResource;

public class SasParser implements SasParserConstants {
  public int count = 0;
  public static List<String> variables = new ArrayList<String>();
  public HashMap<String, String> varMap = new HashMap<String, String>();
  public HashMap<String, String> woeMap = new HashMap<String, String>();
  public HashMap<String, String> typeMap = new HashMap<String, String>();
  public static String name;
  public StringBuilder coeffmapsb = new StringBuilder();
  public StringBuilder varaddsb = new StringBuilder();
  public static String coeff1 = "";
  public static String coeff2 = "";

  static class IfStatement
  {
    String varName;
    String woeName;
    String statement;
    String type;
    Boolean isMissHandler;
  }

  public static String charTrim(String str)
  {
    return str.substring(1, str.length() - 1);
  }

  public HashMap<String, String> parse(String filepath)
  {
    HashMap<String, String> varMap = new HashMap<String, String>();
    InputStream input = null;
    try
    {
      //File sasFile = new ClassPathResource(filepath).getFile();
      File sasFile = new File(filepath);
      input = new java.io.FileInputStream(sasFile);
    }
    catch (IOException e)
    {
      System.out.println("File not found.");
    }

    try
    {
      SasParser parser = new SasParser(input);
      parser.translation_unit();
    }
    catch (ParseException e)
    {
      e.printStackTrace();
    }
    count = 0;
    return varMap;
  }

  public void setWoeMap(HashMap<String, String> woeMap)
  {
        this.woeMap = woeMap;
  }

  final public void translation_unit() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      external_declaration();
    }
    jj_consume_token(0);
  }

  final public void external_declaration() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str = null;
  IfStatement ifstatement = new IfStatement();
    if (jj_2_4(3)) {
      ifstatement = if_statement();
    sb.append(ifstatement.statement + "\u005cn");
      label_2:
      while (true) {
        if (jj_2_2(3)) {
          ;
        } else {
          break label_2;
        }
        str = elseif_statement(ifstatement);
       sb.append(str + "\u005cn");
      }
      str = else_statement(ifstatement);
       sb.append(str);
       if (!ifstatement.isMissHandler) sb.insert(0,ifstatement.statement+"\u005cn");
       typeMap.put(ifstatement.varName,ifstatement.type);
      label_3:
      while (true) {
        if (jj_2_3(3)) {
          ;
        } else {
          break label_3;
        }
        label_statement();
      }
    } else if (jj_2_5(3)) {
      scorecard();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    count++;
    variables.add(ifstatement.varName);
    if (count == 1)
      varaddsb.append("if(" + ifstatement.varName + ".getName().equals(varName)){\u005cn");
    else
      varaddsb.append("else if(" + ifstatement.varName + ".getName().equals(varName)){\u005cn");
    varaddsb.append(sb);

    varaddsb.append("\u005cn}");
  }

  final public IfStatement if_statement() throws ParseException {
  Token flag = new Token();
  Token t = null;
  Token value;
  StringBuilder sb = new StringBuilder();
  StringBuilder getsegmentvarsb = new StringBuilder();
  StringBuilder getsegmentlogicsb = new StringBuilder();
  String varname;
  String str;
  IfStatement ifstatement = new IfStatement();
    jj_consume_token(IF);
    if (jj_2_21(3)) {
      str = var_indentifier();
    varname = str +"_result";

        ifstatement.varName = str;
        getsegmentvarsb.append("Integer " + str +"_result = Contexts.execute(ctxt, " + str + ", null);\u005cn" );
      if (jj_2_12(3)) {
        jj_consume_token(44);
        if (jj_2_8(3)) {
            sb.append("else if "); ifstatement.isMissHandler = false;
          t = jj_consume_token(CHARACTER_LITERAL);
            sb.append("(Arrays.asList(\u005c""+charTrim(t.toString()).trim()+"\u005c").contains(value))");
        } else if (jj_2_9(3)) {
          t = jj_consume_token(45);
            sb.append("if (value == null)"); ifstatement.isMissHandler = true;
        } else if (jj_2_10(3)) {
              sb.append("else if (valueDouble == ");
          if (jj_2_6(3)) {
            jj_consume_token(MINUS);
                sb.append("-");
          } else {
            ;
          }
          t = jj_consume_token(INTEGER_LITERAL);
            getsegmentlogicsb.append("else if (" + varname + "==" + t);
                        sb.append(t + ")");
            ifstatement.isMissHandler = false;
        } else if (jj_2_11(3)) {
            sb.append("else if (valueDouble == ");
          if (jj_2_7(3)) {
            jj_consume_token(MINUS);
               sb.append("-");
          } else {
            ;
          }
          t = jj_consume_token(FLOATING_POINT_LITERAL);
            sb.append(t + ")"); ifstatement.isMissHandler = false;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_13(3)) {
        str = stringvalue_desc(ifstatement);
      sb.append("else if (" + str +")"); ifstatement.isMissHandler = false;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_4:
      while (true) {
        if (jj_2_14(3)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(OR);
      varMap.put(str, t.toString());
        str = var_indentifier();
      varname = str + "_result";
      getsegmentvarsb.append("Integer " + str+"_result = Contexts.execute(ctxt, " + str + ", null);\u005cn" );
        jj_consume_token(44);
        t = jj_consume_token(INTEGER_LITERAL);
      getsegmentlogicsb.append("|| " + varname + "==" + t + ") {\u005cn");
      getsegmentlogicsb.append("return new SessionSegment1(); \u005cn}else{\u005cn");
      getsegmentlogicsb.append("return new SessionSegment2(); \u005cn}");
      varMap.put("getsegment", getsegmentvarsb.toString()+ getsegmentlogicsb.toString());
      }
    } else if (jj_2_22(3)) {
            sb.append("else if (");
      if (jj_2_15(3)) {
        jj_consume_token(MINUS);
      } else {
        ;
      }
                          sb.append("-");
      if (jj_2_16(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
      } else if (jj_2_17(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LESSTHAN);
      str = var_indentifier();
                                   ifstatement.varName = str;
      jj_consume_token(LESSTHANOREQUALTO);
            sb.append( t.toString().trim() + " < valueDouble && valueDouble <= ");
      if (jj_2_18(3)) {
        jj_consume_token(MINUS);
      } else {
        ;
      }
                         sb.append("-");
      if (jj_2_19(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
      } else if (jj_2_20(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
            if(Double.valueOf(t.toString()) >= 2147483648D)sb.append(t.toString().trim() + "D)");
            else  sb.append(t.toString().trim() + ")");
        ifstatement.isMissHandler = false;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        varname = str +"_result";
//	ifstatement.varName = str;

    jj_consume_token(THEN);
    str = var_indentifier();
    jj_consume_token(44);
    sb.append(" woeValue").append(" = ");
    ifstatement.woeName = str;
    woeMap.put(ifstatement.woeName, ifstatement.varName);
    if (jj_2_23(3)) {
      flag = jj_consume_token(MINUS);
    } else {
      ;
    }
    if (jj_2_24(3)) {
      value = jj_consume_token(FLOATING_POINT_LITERAL);
    } else if (jj_2_25(3)) {
      value = jj_consume_token(INTEGER_LITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(46);
    if (flag.toString() != null && flag.toString().trim().equals("-"))
    {
      sb.append( flag.toString() + value.toString() );
    } else
    {
          sb.append( value.toString() );
    }
    {
      sb.append(";");
      ifstatement.statement = sb.toString();
    }

        {if (true) return ifstatement;}
    throw new Error("Missing return statement in function");
  }

  final public String scorecard() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  Token t;
    jj_consume_token(IDENTIFIER);
    jj_consume_token(44);
    label_5:
    while (true) {
      coeff();
      if (jj_2_26(3)) {
        ;
      } else {
        break label_5;
      }
    }
    jj_consume_token(46);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(44);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPARENTHESIS);
    t = jj_consume_token(FLOATING_POINT_LITERAL);
  coeff1 = t.toString();
    jj_consume_token(PLUS);
    jj_consume_token(LPARENTHESIS);
    jj_consume_token(MINUS);
    t = jj_consume_token(FLOATING_POINT_LITERAL);
  coeff2 ="-" + t.toString();
    jj_consume_token(RPARENTHESIS);
    jj_consume_token(MULTIPLY);
    jj_consume_token(LPARENTHESIS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(RPARENTHESIS);
    jj_consume_token(RPARENTHESIS);
    jj_consume_token(46);
    {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String coeff() throws ParseException {
  String var = "";
  Token sign ;
  String value = "";
  Token t;
    if (jj_2_27(3)) {
      sign = jj_consume_token(PLUS);
    } else if (jj_2_28(3)) {
      sign = jj_consume_token(MINUS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LPARENTHESIS);
    t = jj_consume_token(FLOATING_POINT_LITERAL);
    jj_consume_token(MULTIPLY);
    var = var_indentifier();
    jj_consume_token(RPARENTHESIS);
    if (var.equals("Intercept"))
    coeffmapsb.append("coeffMap.put(\u005c"Intercept\u005c"," + sign.toString() + t.toString() + ");\u005cn");
    else coeffmapsb.append("coeffMap.put("+woeMap.get(var)+".getName()," + sign.toString() + t.toString() + ");\u005cn");
    {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  final public String elseif_statement(IfStatement ifstatement) throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  Token t;
    jj_consume_token(ELSE);
    jj_consume_token(IF);
    sb.append("else if ");
    if (jj_2_33(3)) {
      str = var_indentifier();
                                ifstatement.varName=str;
      if (jj_2_29(3)) {
        str = digitvalue_desc();
                                      sb.append("(" + str +")"); ifstatement.type="numeric";
      } else if (jj_2_30(3)) {
        str = stringvalue_desc(ifstatement);
                                                  sb.append("(" + str +")");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_34(3)) {
      if (jj_2_31(3)) {
        jj_consume_token(LPARENTHESIS);
      } else {
        ;
      }
      str = digitvalue_desc();
      if (jj_2_32(3)) {
        jj_consume_token(RPARENTHESIS);
      } else {
        ;
      }
    sb.append("(" + str +")");ifstatement.type="numeric";
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(THEN);
    str = var_indentifier();
    jj_consume_token(44);
    sb.append(" woeValue = ");
    if (jj_2_35(3)) {
      jj_consume_token(MINUS);
          sb.append("-");
    } else {
      ;
    }
    t = jj_consume_token(FLOATING_POINT_LITERAL);
    sb.append(t.toString());
    jj_consume_token(46);
    sb.append(";");
  {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String else_statement(IfStatement ifstatement) throws ParseException {
  String str;
  Token t;
  StringBuilder sb = new StringBuilder();
  String value = "";
    jj_consume_token(ELSE);
    str = var_indentifier();
    jj_consume_token(44);
    sb.append("else woeValue = ");
    if (jj_2_36(3)) {
      jj_consume_token(MINUS);
          sb.append("-"); value = "-";
    } else {
      ;
    }
    if (jj_2_37(3)) {
      t = jj_consume_token(FLOATING_POINT_LITERAL);
    } else if (jj_2_38(3)) {
      t = jj_consume_token(INTEGER_LITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    sb.append(t.toString()); value += t.toString();
    jj_consume_token(46);
    sb.append(";");
  ifstatement.statement = "if (value==null) woeValue = " + value + ";";
  {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  final public void label_statement() throws ParseException {
    jj_consume_token(LABEL);
    var_indentifier();
    jj_consume_token(44);
    jj_consume_token(CHARACTER_LITERAL);
    jj_consume_token(46);
  }

  final public String var_indentifier() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
        {if (true) return t.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String digitvalue_desc() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  Token t;
    if (jj_2_53(3)) {
      jj_consume_token(44);
      jj_consume_token(45);
     sb.append(" = . ");
    } else if (jj_2_54(3)) {
      str = var_indentifier();
      jj_consume_token(GREATERTHAN);
   sb.append(" valueDouble > ");
      if (jj_2_39(3)) {
        jj_consume_token(MINUS);
         sb.append("-");
      } else {
        ;
      }
      if (jj_2_40(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
    sb.append(t.toString());
      } else if (jj_2_41(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
    sb.append(t.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_55(3)) {
      str = var_indentifier();
      jj_consume_token(44);
   sb.append(" valueDouble == ");
      if (jj_2_42(3)) {
        jj_consume_token(MINUS);
         sb.append("-");
      } else {
        ;
      }
      if (jj_2_43(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
    sb.append(t.toString());
      } else if (jj_2_44(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
    sb.append(t.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_56(3)) {
      if (jj_2_48(3)) {
        jj_consume_token(45);
          sb.append("");
      } else if (jj_2_49(3)) {
        if (jj_2_45(3)) {
          t = jj_consume_token(MINUS);
                  sb.append("-");
        } else {
          ;
        }
        if (jj_2_46(3)) {
          t = jj_consume_token(INTEGER_LITERAL);
        } else if (jj_2_47(3)) {
          t = jj_consume_token(FLOATING_POINT_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
       sb.append(t.toString() + " < valueDouble &&");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LESSTHAN);
      str = var_indentifier();
      jj_consume_token(LESSTHANOREQUALTO);
       sb.append(" valueDouble <= ");
      if (jj_2_50(3)) {
        jj_consume_token(MINUS);
           sb.append("-");
      } else {
        ;
      }
      if (jj_2_51(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
      if(Double.valueOf(t.toString()) >= 2147483648D)sb.append(t.toString().trim() + "D");
          else  sb.append(t.toString().trim() + "");
      } else if (jj_2_52(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
      sb.append(t.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String stringvalue_desc(IfStatement ifstatement) throws ParseException {
  StringBuilder sb = new StringBuilder();
  Token t;
    if (jj_2_69(3)) {
      jj_consume_token(44);
      t = jj_consume_token(CHARACTER_LITERAL);
 ifstatement.type="string"; sb.append(" Arrays.asList("+"\u005c"" + charTrim(t.toString()).trim() + "\u005c""+").contains(value) ");
    } else if (jj_2_70(3)) {
      jj_consume_token(IN);
      jj_consume_token(LPARENTHESIS);
   sb.append("Arrays.asList( ");
      if (jj_2_57(3)) {
        t = jj_consume_token(CHARACTER_LITERAL);
                                sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c""); ifstatement.type="string";
      } else if (jj_2_58(3)) {
        t = jj_consume_token(STRING_LITERAL);
                              sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c""); ifstatement.type="string";
      } else if (jj_2_59(3)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
                                      sb.append( t.toString().trim()); ifstatement.type="numeric";
      } else if (jj_2_60(3)) {
        t = jj_consume_token(INTEGER_LITERAL);
                               sb.append(t.toString().trim()); ifstatement.type="numeric";
      } else if (jj_2_61(3)) {
        t = jj_consume_token(45);
               sb.append("null");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_6:
      while (true) {
        if (jj_2_62(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(47);
    sb.append(",");
        if (jj_2_65(3)) {
          t = jj_consume_token(CHARACTER_LITERAL);
                                 sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c""); ifstatement.type="string";
        } else if (jj_2_66(3)) {
          t = jj_consume_token(STRING_LITERAL);
                                sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c""); ifstatement.type="string";
        } else if (jj_2_67(3)) {
          if (jj_2_63(3)) {
            jj_consume_token(MINUS);
                  sb.append("-");
          } else {
            ;
          }
          t = jj_consume_token(FLOATING_POINT_LITERAL);
                                                                       sb.append(t.toString().trim()); ifstatement.type="numeric";
        } else if (jj_2_68(3)) {
          if (jj_2_64(3)) {
            jj_consume_token(MINUS);
              sb.append("-");
          } else {
            ;
          }
          t = jj_consume_token(INTEGER_LITERAL);
                                                            sb.append(t.toString().trim()); ifstatement.type="numeric";
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPARENTHESIS);
           sb.append(")" + ".contains(value) ");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return sb.toString().trim();}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
